--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         classpath "com.google.dagger:hilt-android-gradle-plugin:$versions.daggerHiltAndroidVersion"
         classpath "com.diffplug.spotless:spotless-plugin-gradle:$versions.spotlessGradle"
         classpath "com.github.ben-manes:gradle-versions-plugin:$versions.versionPlugin"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$versions.navigationVersion"
     }
 }
 
